Correcting java version to 8